--- a/resources/network_display.html
+++ b/resources/network_display.html
@@ -8,7 +8,7 @@
         body {
             background-color: #000000;
             color: #ffffff;
-            font-family: 'Segoe UI', 'Arial', 'sans-serif';
+            font-family: 'Courier New', 'Arial', 'sans-serif';
             margin: 0;
             padding: 0;
             display: flex;
