feat: enhance countdown message for upcoming meetings in network display

--- a/resources/network_display.html
+++ b/resources/network_display.html
@@ -22,7 +22,7 @@
         
         #timer-display {
             font-family: 'Courier New', monospace;
-            font-size: 25vmin;
+            font-size: clamp(10vmin, 14vw, 20vmin);
             font-weight: bold;
             margin: 0;
             line-height: 1;
